--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -94,15 +94,6 @@ img{
     max-width: 100%;
     height: auto;}
 button{text-align: center;}
-/* others */
-.stroke-text-1{
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 0.05rem;}
-.stroke-text-2{
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 2px;}
-
-
 
 
 /* ========== REUSABLE CSS CLASSES ========== */
@@ -163,7 +154,12 @@ button{text-align: center;}
 .main{
     overflow: hidden; /* for animation ScrollReveal*/
 }
-
+.stroke-text{
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 0.04rem;}
+.none{
+    display: none;
+}
 
 
 
