minor changes to design

--- a/public/output.css
+++ b/public/output.css
@@ -591,14 +591,16 @@ video {
 :root{
   --header-height: 3.5rem;
   /* ---- colors ---- */
-  --first-color: hsl(14, 98%, 50%);
+  --first-color: hsla(202, 98%, 50%, 0.542);
+  /* --first-color: hsl(14, 98%, 50%); */
   --black-color: hsl(0, 0%, 0%);
   --black-color-light: hsl(0, 0%, 40%);
   --white-color: hsl(0, 0%, 95%);
   --title-color: hsl(0, 0%, 0%);
   --text-color: hsl(0, 0%, 35%);
   --text-color-light: hsl(0, 0%, 64%);
-  --body-color: hsl(0, 0%, 74%);
+  --body-color: #DCDCDC;
+  /* --body-color: hsl(0, 0%, 80%); */
   /* --body-color: hsl(0, 0%, 87%); */
   --container-color: hsl(0, 0%, 83%);
   /* ---- fonts ---- */
@@ -822,6 +824,7 @@ button{
   background-color: var(--body-color);
   z-index: var(--z-fixed);
   transition: box-shadow .4s;
+  border-bottom: 1px solid rgb(212, 212, 212);
 }
 
 .nav{
@@ -1072,15 +1075,8 @@ button{
 
 .home__description b{
   background: linear-gradient(90deg, 
-                                hsla(14, 98%, 50%, .3),
+                                hsla(202, 98%, 50%, 0.3),
                                 hsla(14, 98%, 50%, 0));
-}
-
-/* ---- home section: mobile ---- */
-
-@media screen and (max-width: 1150px) {
-  .home__description{
-  }
 }
 
 .home__scroll{
