--- a/public/output.css
+++ b/public/output.css
@@ -831,7 +831,7 @@ button{
 }
 
 .nav{
-  /* background-color: red; -- for debugging -- */
+  background-color: red;
   position: relative;
   height: var(--header-height);
   display: flex;
@@ -1092,7 +1092,10 @@ button{
   background-color: var(--black-color-light);
   color: var(--white-color);
   font-size: 1.25rem;
-  padding: 6px;
+  /* padding: 6px; */
+  width: 2.3rem;
+  height: 2.3rem;
+  /*========EDITING=========*/
   display: grid;
   place-items: center;
   transition: background-color .3s;
