--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -193,7 +193,7 @@ button{text-align: center;}
     border-bottom: 1px solid rgb(212, 212, 212);
 }
 .nav{
-    /* background-color: red; -- for debugging -- */
+    background-color: red;
     position: relative;
     height: var(--header-height);
     display: flex;
@@ -417,7 +417,9 @@ button{text-align: center;}
     background-color: var(--black-color-light);
     color: var(--white-color);
     font-size: 1.25rem;
-    padding: 6px;
+    /* padding: 6px; */
+    width: 2.3rem;
+    height: 2.3rem; /*========EDITING=========*/
     display: grid;
     place-items: center;
     transition: background-color .3s;
