--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -404,7 +404,7 @@ button{text-align: center;}
     z-index: 10;
 }
 .home__social{
-    height: max-content;
+    height: 10rem;
     position: absolute;
     left: -3rem;
     top: 0;
