--- a/public/output.css
+++ b/public/output.css
@@ -1007,6 +1007,12 @@ button{
   top: 0;
 }
 
+/* ---- add shadow header ---- */
+
+.shadow-header{
+  box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12 );
+}
+
 /* ============== HOME SECTION ============== */
 
 .home__container{
