--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 /* -------- Font Type------- */
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+
 /* ========= VARIABLES ========== */
 :root{
     --header-height: 3.5rem;
@@ -39,7 +40,8 @@
     --font-bold: 700;
     /* ---- z index ---- */
     --z-tooltip: 10;
-    --z-fixed: 100;}
+    --z-fixed: 100;
+}
 /* ====----- Responsive typography -----==== */
 @media screen and (min-width: 1150px){
     :root{
@@ -341,6 +343,11 @@ button{text-align: center;}
 .show-menu{
     top: 0;
 }
+/* ---- add shadow header ---- */
+.shadow-header{
+    box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12 );
+}
+
 
 
 
