--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -171,6 +171,10 @@ button{text-align: center;}
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 0.075rem;
 }
+.stroke-text-2{
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 0.02rem;
+}
 .none{
     display: none;
 }
@@ -602,7 +606,13 @@ button{text-align: center;}
 
 
 /* ============== ABOUT SECTION ============== */
+/* -- temporary -- */
+.services{display: none;}
+/* -- temporary -- */
+
+
 .services__container{
+    display: flex;
     grid-template-columns: 250px;
     justify-content: center;
     row-gap: 2rem;
@@ -620,15 +630,15 @@ button{text-align: center;}
     position: relative;
     transition: background-color .4s, border .4s;
 }
-.services__border{
+/* .services__border{
     position: absolute;
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     border: 4px solid var(--first-color);
     top: 0;
     left: 0;
     transition: transform .4s;
-}
+} */
 .services__card:hover .services__border{
     transform: translate(.75rem, .75rem);
 }
@@ -654,4 +664,42 @@ button{text-align: center;}
     font-size: var(--h2-font-size);
     margin-bottom: 1.25rem;
 
+}
+
+
+
+
+
+
+
+
+
+/* ============== FOOTER ============== */
+.footer{
+    background-color: var(--black-color);
+}
+.footer__container{
+    padding-block: 3rem 2rem;
+    row-gap: 2.5rem;
+}
+.footer__links, .footer__socials{
+    display: flex;
+    justify-content: center;
+    column-gap: 2rem;
+}
+.footer__link{
+    color: var(--white-color);
+    transition: color .4s;
+}
+.footer__link:hover{
+    color: var(--text-color-light);
+}
+.footer__name{
+    color: var(--text-color-light);
+    font-size: var(--small-font-size);
+    text-align: center;
+}
+.footer__name{
+    color: var(--white-color);
+    font-weight: var(--font-medium);
 }
