--- a/public/output.css
+++ b/public/output.css
@@ -595,7 +595,7 @@ video {
 :root{
   --header-height: 3.5rem;
   /* ---- colors ---- */
-  --first-color: hsla(32, 55%, 45%, 0.438);
+  --first-color: hsla(178, 72%, 54%, 0.659);
   /* --first-color: hsla(202, 98%, 50%, 0.542); */
   --black-color: hsl(0, 0%, 0%);
   --black-color-light: hsl(0, 0%, 40%);
@@ -832,8 +832,8 @@ button{
   -moz-column-gap: .5rem;
        column-gap: .5rem;
   border-radius: 50px;
-  border: 1px solid hsla(32, 55%, 45%, 0.678);
-  background-color: hsla(32, 55%, 45%, 0.727);
+  border: 1px solid var(--first-color);
+  background-color: var(--first-color);
   color: var(--white-color);
   width: 45px;
   height: 45px;
@@ -846,7 +846,17 @@ button{
 }
 
 .button__surprise:hover{
-  border: 3px solid var(--first-color);
+  border: 1px solid var(--white-color);
+  background-color: var(--white-color);
+  color: var(--first-color);
+}
+
+.button__surprise:focus{
+  border: 1px solid var(--white-color);
+  background-color: var(--white-color);
+  color: var(--first-color);
+  width: 4px;
+  height: 40px;
 }
 
 /* ============== HEADER & NAVBAR ============== */
