contact section 82% done

--- a/public/output.css
+++ b/public/output.css
@@ -821,7 +821,7 @@ button{
 
 /* =======--- SURPRISE BUTTON ---======= */
 
-.button__surprise{
+.theme__button {
   position: fixed;
   z-index: 11;
   bottom: 1.25rem;
@@ -841,22 +841,14 @@ button{
   transition: border .4s, color .4s;
 }
 
-.button__surprise i{
+.theme__button i{
   font-size: 1.25rem;
 }
 
-.button__surprise:hover{
+.theme__button:hover{
   border: 1px solid var(--white-color);
   background-color: var(--white-color);
   color: var(--first-color);
-}
-
-.button__surprise:focus{
-  border: 1px solid var(--white-color);
-  background-color: var(--white-color);
-  color: var(--first-color);
-  width: 40px;
-  height: 40px;
 }
 
 /* ============== HEADER & NAVBAR ============== */
@@ -1413,6 +1405,10 @@ button{
 
 .contact__data{
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 300px;
   height: 300px;
   background-color: var(--container-color);
@@ -1430,6 +1426,7 @@ button{
 
 .contact__description-1{
   color: var(--title-color);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   margin-bottom: 2rem;
 }
@@ -1539,27 +1536,34 @@ button{
 .contact__button{
   background-color: var(--first-color);
   cursor: pointer;
+  border: 3px solid ;
+}
+
+.contact__button:hover{
+  background-color: var(--white-color);
+  color: var(--first-color);
+  border: 3px solid var(--first-color);
 }
 
 /* -- Opaque placeholder -- */
 
-.contact__inout::focus::-moz-placeholder{
+.contact__input:focus::-moz-placeholder{
   opacity: 0;
 }
 
-.contact__inout::focus::placeholder{
+.contact__input:focus::placeholder{
   opacity: 0;
 }
 
 /* -- Move label up and sticky label -- */
 
-.contact__input:not(:-moz-placeholder-shown).contact__input:not(:focus) + .contact__label{
+.contact__input:not(:-moz-placeholder-shown):not(:focus) + .contact__label{
   opacity: 1;
   top: -16px;
 }
 
 .contact__input::focus + .contact__label,
-.contact__input:not(:placeholder-shown).contact__input:not(:focus) + .contact__label{
+.contact__input:not(:placeholder-shown):not(:focus) + .contact__label{
   opacity: 1;
   top: -16px;
 }
