--- a/public/output.css
+++ b/public/output.css
@@ -819,38 +819,6 @@ button{
   display: none;
 }
 
-/* =======--- SURPRISE BUTTON ---======= */
-
-.theme__button {
-  position: fixed;
-  z-index: 11;
-  bottom: 1.25rem;
-  right: 1.25rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  -moz-column-gap: .5rem;
-       column-gap: .5rem;
-  border-radius: 50px;
-  border: 1px solid var(--first-color);
-  background-color: var(--first-color);
-  color: var(--white-color);
-  width: 45px;
-  height: 45px;
-  padding: .75rem;
-  transition: border .4s, color .4s;
-}
-
-.theme__button i{
-  font-size: 1.25rem;
-}
-
-.theme__button:hover{
-  border: 1px solid var(--white-color);
-  background-color: var(--white-color);
-  color: var(--first-color);
-}
-
 /* ============== HEADER & NAVBAR ============== */
 
 .header{
@@ -1330,7 +1298,7 @@ button{
 /* ============== ABOUT SECTION ============== */
 
 .services__container{
-  display: flex;
+  /* display: flex; */
   grid-template-columns: 250px;
   justify-content: center;
   row-gap: 2rem;
@@ -1536,23 +1504,29 @@ button{
 .contact__button{
   background-color: var(--first-color);
   cursor: pointer;
-  border: 3px solid ;
 }
 
 .contact__button:hover{
   background-color: var(--white-color);
   color: var(--first-color);
-  border: 3px solid var(--first-color);
+}
+
+.contact__input::-moz-placeholder{
+  color: transparent;
+}
+
+.contact__input::placeholder{
+  color: transparent;
 }
 
 /* -- Opaque placeholder -- */
 
 .contact__input:focus::-moz-placeholder{
-  opacity: 0;
+  color: var(--white-color);
 }
 
 .contact__input:focus::placeholder{
-  opacity: 0;
+  color: var(--white-color);
 }
 
 /* -- Move label up and sticky label -- */
@@ -1562,7 +1536,7 @@ button{
   top: -16px;
 }
 
-.contact__input::focus + .contact__label,
+.contact__input:focus + .contact__label,
 .contact__input:not(:placeholder-shown):not(:focus) + .contact__label{
   opacity: 1;
   top: -16px;
@@ -1599,6 +1573,6 @@ button{
   color: var(--text-color-light);
   font-size: var(--small-font-size);
   text-align: center;
-  color: var(--white-color);
+  color: rgb(165, 165, 165);
   font-weight: var(--font-medium);
 }
