--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,16 +7,12 @@
 /* -------- Font Type------- */
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-.bro{
-    border-radius: 0.4rem;
-}
-
 /* ========= VARIABLES ========== */
 :root{
     --header-height: 3.5rem;
     /* ---- colors ---- */
-    --first-color: hsla(178, 72%, 54%, 0.659);
-    /* --first-color: hsla(202, 98%, 50%, 0.542); */
+    --first-color: #242424;
+    --first-border: rgba(207, 207, 207, 0.789);
     --black-color: hsl(0, 0%, 0%);
     --black-color-light: hsl(0, 0%, 40%);
     --white-color: hsl(0, 0%, 95%);
@@ -125,47 +121,6 @@ button{text-align: center;}
 .section{
     padding-block: 4rem 2rem;
 }
-.section__title-1,
-.section__title-2{
-    position: relative;
-    font-size: var(--h1-font-size);
-    width: max-content;
-    margin: .75rem auto 2rem;
-}
-.section__title-1 span,
-.section__title-2 span{
-    z-index: 5;
-    position: relative;
-}
-.section__title-1::after,
-.section__title-2::after{
-    content: "";
-    width: 48px;
-    height: 28px;
-    background-color: var(--first-color);
-    position: absolute;
-    top: -4px;
-    right: -8px;
-}
-.section__title-2::after{
-    bottom: -4px;
-}
-.geometric-box{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: var(--first-color);
-    transform: rotate(-30deg);
-}
-.geometric-box::after{
-    content: "";
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    border: 3px solid var(--black-color);
-    left: -5px;
-    top: -5px;
-}
 .main{
     overflow: hidden; /* for animation ScrollReveal*/
 }
@@ -177,66 +132,65 @@ button{text-align: center;}
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 0.02rem;
 }
-.none{
-    display: none;
-}
+
+
 
 
 /* ============== HEADER & NAVBAR ============== */
 .header{
-    /* background-color: blue; */ /* -- for debugging --*/
-
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: var(--body-color);
     z-index: var(--z-fixed);
     transition: box-shadow .4s;
-    border-bottom: 1px solid rgb(212, 212, 212);
 }
 .nav{
-    position: relative;
     height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     width: 1150px;
     left: 50%;
     transform: translateX(-50%);   
 }
-.nav__menu{
-    display: none;
-    top: -100%;
+.nav .nav__action__links a{
+    border-color:var(--first-border);
 }
-.nav__logo{
-    display: flex;
-    column-gap: .5rem;
-    align-items: center;
-    font-weight: var(--font-semi-bold);
-    color: var(--title-color);
-}
-.nav__logo-circle,
-.nav__toggle{
-    width: 32px;
-    height: 32px;
-    background-color: var(--black-color);
+.nav .nav__action__links .email{
+    background-color: var(--first-color);
     color: var(--white-color);
-    display: grid;
-    place-items: center;
 }
-.nav__logo-circle{
-    border-radius: 50%;
+.nav .nav__action__links .cv{
+    background-color: var(--white-color); 
+    color: var(--first-color);
 }
-.nav__toggle{
-    font-size: 1.25rem;
-    cursor: pointer;
+.nav .nav__social__links .mobile a{
+    background-color: var(--white-color);
+    color: var(--first-color);
+    border-color:var(--first-border);
+}
+.nav__action__links .desktop{
+    color: var(--first-color);
 }
 
-/* ---- nav for mobile ---- */
+
+
+/* ============== HOME SECTION ============== */
+.home .profile{
+    width: 10rem;
+    /* background-color: blue; */
+}
+.home .profile .image{
+    border-color: var(--white-color);
+}
+.home .profile .name{
+    background-color: var(--white-color);
+    top: 2rem;
+    left: 6rem;
+    transform: rotate(-15deg);
+
+}
+.home .content .text{
+    /* background-color: red; */
+} 
+
+
+
+/* ============== MEDIA QUERIES ============== */
 @media screen and (min-width: 1750px) {
     .header{
         width: 100%;
@@ -244,16 +198,9 @@ button{text-align: center;}
         left: 0;
     }
     .nav{
-        /* width: 100%; */
         width: max-content;
         left: 0;
         transform: translateX(0);
-    }
-    .nav__menu{
-        top: -1000%; /* was -100% before */
-        left: 0;
-        background-color: hsla(0, 0%, 0%, .75);
-        width: 100%;
     }
 }
 
@@ -263,558 +210,19 @@ button{text-align: center;}
         left: 0;
         transform: translateX(0);
     }
-    .nav__menu{
-        display: block;
-        position: fixed;
-        top: -1000%;
-        left: 0;
-        background-color: hsla(0, 0%, 0%, .75);
+}
+@media screen and (max-width: 550px) {
+    .nav{
         width: 100%;
-        padding-block: 1.8rem 5rem;
-        text-align: center;
-        backdrop-filter: blur(8px);
-        transition: top .4s;
+        left: 0;
+        transform: translateX(0);
     }
-}
-
-.nav__title,
-.nav__name,
-.nav__close{
-    color: var(--white-color);
-}
-.nav__title{
-    display: block;
-    font-size: var(--smaller-font-size);
-    font-weight: var(--font-semi-bold);
-    margin-bottom: 3.5rem;
-}
-.nav__name{
-    position: relative;
-    width: max-content;
-    margin: 0 auto 3rem;
-    font-size: var(--h2-font-size);
-}
-.nav__name::after,
-.nav__name::before{
-    content: '';
-    width: 40px;
-    height: 1px;
-    background-color: var(--text-color-light);
-    position: absolute;
-    top: 50%;
-    left: -4rem;
-}
-.nav__name::before{
-    left: initial;
-    right: -4rem;
-}
-.nav__list{
-    display: flex;
-    flex-direction: column;
-    row-gap: 2.5rem;
-}
-.nav__link{
-    position: relative;
-    color: var(--text-color-light);
-    font-size: var(--h3-font-size);
-    font-weight: var(--font-semi-bold);
-    transition: color .3s;
-}
-.nav__link::after{
-    content: '';
-    width: 25%;
-    height: 2px;
-    background-color: var(--white-color);
-    position: absolute;
-    left: 0;
-    bottom: -.5rem;
-    transition: width .3s;
-}
-.nav__link:hover{
-    color: var(--white-color);
-}
-.nav__link:hover::after{
-    width: 25%;
-}
-.nav__close{
-    position: absolute;
-    font-size: 1.5rem;
-    top: 1rem;
-    right: 1.5rem;
-    cursor: pointer;
-}
-/* ---- show menu ---- */
-.show-menu{
-    top: 0;
-}
-/* ---- add shadow header ---- */
-.shadow-header{
-    box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12 );
-}
-
-
-
-
-/* ============== HOME SECTION ============== */
-
-.home__container{
-    padding-top: 2rem;
-}
-.home__name{
-    font-size: var(--biggest-font-size);
-    text-align: center;
-}
-.home__perfil{
-    position: relative;
-    justify-self: center;
-}
-.home__image{
-    width: 220px;
-}
-.home__img{
-    position: relative;
-    z-index: 10;
-    max-height: max-content;
-}
-.home__shadow{
-    width: 100%;
-    height: 100%;
-    background-color: var(--container-color);
-    position: absolute;
-    bottom: -.75rem;
-    right: -.75rem;
-    border: 4px solid var(--black-color);
-    z-index: 5;
-    transition: background-color .4s;
-}
-
-.home__arrow,
-.home__line{
-    position: absolute;
-    filter: invert(1);
-    width: 50px;
-    transition: filter .4s;
-}
-.home__arrow{
-    left: 40%;
-    bottom: -4rem;
-}
-.home__line{
-    right: -2rem;
-    bottom: -.5rem;
-}
-.home__perfil .geometric-box{
-    top: 2.5rem;
-    left: -.7rem; 
-    z-index: 10;
-}
-.home__social{
-    height: 10rem;
-    position: absolute;
-    left: -3rem;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    display: grid;
-    row-gap: 1rem;
-}
-.home__social-link{
-    background-color: var(--black-color-light);
-    color: var(--white-color);
-    font-size: 1.25rem;
-    width: 2.3rem;
-    height: 2.3rem; /*========EDITING=========*/
-    display: grid;
-    place-items: center;
-    transition: background-color .3s;
-}
-.home__social-link:hover{
-    background-color: var(--black-color);
-}
-.home__info{
-    width: 100%;
-    margin-top: 4rem;
-}
-.home__description{
-    text-align: center;
-    color: var(--title-color);
-    margin-bottom: 1.5rem;
-}
-.home__description b{
-    background: linear-gradient(90deg, 
-                                var(--first-color),
-                                /* hsla(202, 98%, 50%, 0.3), */
-                                hsla(14, 98%, 50%, 0));
-}
-.home__scroll{
-    display: block;
-    width: max-content;
-    margin: 0 auto;
-}
-.home__scroll-text{
-    display: none;
-}
-.home__scroll-box{
-    background-color: var(--black-color);
-    color: var(--white-color);
-    width: 36px;
-    height: 36px;
-    display: grid;
-    place-items: center;
-    font-size: 1rem;
-    cursor: pointer;
-    overflow: hidden;
-    transition: background-color .4s;
-}
-.home__scroll-box i{
-    animation: scroll-down 3s infinite;
-}
-
-/* ---- show menu ---- */
-@keyframes scroll-down {
-    0%{
-        transform: translateY(-1rem);
-        opacity: 0;
+    .nav .nav__social__links .mobile{
+        display: flex;
     }
-    50%{
-        transform: translateY(0rem);
-        opacity: 1;
-    }
-    100%{
-        transform: translateY(.6rem);
-        opacity: 0;
+    .nav .nav__social__links .desktop{
+        display: none;
     }
 }
 
 
-
-/* ============== ABOUT SECTION ============== */
-.about{
-    background-color: var(--container-color);
-    transition: background-color .4s;
-}
-.about__container{
-    row-gap: 0;
-}
-.about__perfil{
-    position: relative;
-    justify-self: center;
-    margin-block: 2.5rem 4.5rem;
-}
-.about__image{
-    width: 220px;    
-}
-.about__img{
-    position: relative;
-    border: 4px solid var(--white-color);
-    z-index: 1;
-}
-.about__shadow,
-.about__line,
-.about__box{
-    position: absolute;
-}
-.about__shadow{
-    width: 150px;
-    height: 385px;
-    background-color: var(--body-color);
-    top: -2.5rem;
-    right: -3.5rem;
-    border-bottom: 4px solid var(--first-color);
-    transition: background-color .4s;
-}
-.about__perfil .geometric-box{
-    top: 1.5rem;
-    right: -2.8rem;
-}
-.about__line{
-    filter: invert(1);
-    right: -1.25rem;
-    top: 6rem;
-    width: 50px;
-    transition: filter .4s;
-}
-.about__box{
-    width: 40px;
-    height: 40px;
-    background-color: var(--first-color);
-    right: -.5rem;
-    bottom: 1.5rem;
-}
-.about__info{
-    padding-left: 1.25rem;
-}
-.about__description{
-    position: relative;
-    color: var(--title-color);
-    margin-bottom: 1.5rem;
-}
-.about__description::after{
-    content: '';
-    width: 20px;
-    height: 1px;
-    background-color: var(--title-color);
-    position: absolute;
-    left: -1.75rem;
-    top: .5rem;
-}
-.about__list{
-    list-style: square;
-    color: var(--title-color);
-    margin-bottom: 3rem;
-}
-.about__buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 1rem;
-}
-
-/* ============== BUTTON ============== */
-.button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: .5rem;
-}
-.button{
-    background-color: var(--black-color);
-    padding: 1.1rem 1.5rem;
-    color: var(--white-color);
-    font-weight: var(--font-medium);
-    transition: background-color .4s;
-}
-.button i{
-    font-size: 1.25rem;
-}
-.button:hover{
-    background-color: var(--first-color);
-}
-/* ============== ABOUT SECTION ============== */
-.services__container{
-    /* display: flex; */
-    grid-template-columns: 250px;
-    justify-content: center;
-    row-gap: 2rem;
-    padding-top: 1rem;
-}
-.service__card{
-    position: relative;
-}
-.services__content{
-    height: 100%;
-    background-color: var(--body-color);
-    border: 4px solid var(--black-color);
-    padding: 6rem 1rem 3rem;
-    z-index: 5;
-    position: relative;
-    transition: background-color .4s, border .4s;
-}
-/* .services__border{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: 4px solid var(--first-color);
-    top: 0;
-    left: 0;
-    transition: transform .4s;
-} */
-.services__card:hover .services__border{
-    transform: translate(.75rem, .75rem);
-}
-.service__icon{
-    position: relative;
-    display: inline-block;
-}
-.service__icon i{
-    font-size: 2rem;
-    color: var(--black-color);
-    position: relative;
-    z-index: 5;
-}
-.services__box{
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    background-color: var(--first-color);
-    right: -2px;
-    top: -2px;
-}
-.services__title{
-    font-size: var(--h2-font-size);
-    margin-bottom: 1.25rem;
-}
-
-
-/* ============== CONTACT SECTION ============== */
-.contact{
-    padding-bottom: 0;
-}
-.contact__container{
-    position: relative;
-    grid-template-rows: 300px max-content max-content;
-    row-gap: 0;
-}
-.contact__data{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 300px;
-    height: 300px;
-    background-color: var(--container-color);
-    padding: 3rem 1.5rem 3.5rem;
-    margin-left: auto;
-    border-bottom: 4px solid var(--first-color);
-    z-index: 5;
-    transition: background-color .4s;
-}
-.contact__data .section__title-2{
-    margin: 0 0 1.5rem;
-    transform: translateX(-3rem);
-}
-.contact__description-1{
-    color: var(--title-color);
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: 2rem;
-}
-.contact__description-2{
-    color: var(--title-color);
-    font-size: var(--small-font-size);
-}
-.contact__data .geometric-box{
-    top: 2rem;
-    right: 2.5rem;
-}
-.contact__mail{
-    position: relative;
-    background-color: var(--black-color);
-    padding: 5rem 1.5rem 2.5rem;
-    margin-top: -2.5rem;
-    transition: background-color .4s;
-}
-.contact__title{
-    color: var(--white-color);
-    font-size: var(--h2-font-size);
-    margin-bottom: 2rem;
-    text-align: center;
-}
-.contact__form,
-.contact__group{
-    display: grid;
-    row-gap: 1.25rem;
-}
-.contact__form{
-    position: relative;
-}
-.contact__box{
-    position: relative;
-    width: 100%;
-    height: 58px;
-}
-.contact__input,
-.contact__button{
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    outline: none;
-    border: none;
-}
-.contact__input{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: var(--black-color);
-    border: 3px solid var(--black-color-light);
-    color: var(--white-color);
-    padding: .5rem 1rem;
-    font-weight: var(--font-medium);
-    transition: border .4s, background-color .4s;
-}
-.contact__input::placeholder{
-    color: var(--text-color-light);
-    transition: opacity .4s;
-}
-.contact__input::focus{
-    border: 3px solid var(--white-color);
-}
-.contact__input::webkit-autofill{
-    transition: background-color 6000s, color 6000s;
-}
-.contact__label{
-    position: absolute;
-    top: 8px;
-    left: 10px;
-    color: var(--text-color);
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
-    background-color: var(--black-color);
-    padding: 8px;
-    pointer-events: none;
-    transition: top .4s, opacity .4s, background-color .4s;
-}
-.contact__form .contact__area{
-    height: 10rem;
-}
-.contact__area textarea{
-    resize: none;
-    padding-top: 1rem;
-}
-.contact__button{
-    background-color: var(--first-color);
-    cursor: pointer;
-}
-.contact__button:hover{
-    background-color: var(--white-color);
-    color: var(--first-color);
-}
-.contact__input::placeholder{
-    color: transparent;
-}
-/* -- Opaque placeholder -- */
-.contact__input:focus::placeholder{
-    color: var(--white-color);
-}
-/* -- Move label up and sticky label -- */
-.contact__input:focus + .contact__label,
-.contact__input:not(:placeholder-shown):not(:focus) + .contact__label{
-    opacity: 1;
-    top: -16px;
-}
-
-
-
-
-
-
-
-/* ============== FOOTER ============== */
-.footer{
-    background-color: var(--black-color);
-}
-.footer__container{
-    padding-block: 3rem 2rem;
-    row-gap: 2.5rem;
-}
-.footer__links, .footer__socials{
-    display: flex;
-    justify-content: center;
-    column-gap: 2rem;
-}
-.footer__link{
-    color: var(--white-color);
-    transition: color .4s;
-}
-.footer__link:hover{
-    color: var(--text-color-light);
-}
-.footer__name{
-    color: var(--text-color-light);
-    font-size: var(--small-font-size);
-    text-align: center;
-}
-.footer__name{
-    color: rgb(165, 165, 165);
-    font-weight: var(--font-medium);
-}
