--- a/public/output.css
+++ b/public/output.css
@@ -636,6 +636,10 @@ video {
   height: 10rem;
 }
 
+.h-9{
+  height: 2.25rem;
+}
+
 .w-40{
   width: 10rem;
 }
@@ -672,10 +676,6 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .border-\[0\.125rem\]{
   border-width: 0.125rem;
 }
@@ -684,36 +684,12 @@ video {
   border-width: 0.15rem;
 }
 
-.border-\[0\.5rem\]{
-  border-width: 0.5rem;
-}
-
-.border-\[0\.25rem\]{
-  border-width: 0.25rem;
-}
-
-.border-\[0\.2rem\]{
-  border-width: 0.2rem;
-}
-
-.border-\[0\.1rem\]{
-  border-width: 0.1rem;
-}
-
-.border-\[0\.17rem\]{
-  border-width: 0.17rem;
-}
-
 .border-\[0\.175rem\]{
   border-width: 0.175rem;
 }
 
 .border-solid{
   border-style: solid;
-}
-
-.border-\[0\.rem\]{
-  border-color: 0.rem;
 }
 
 .bg-transparent{
@@ -729,9 +705,17 @@ video {
   padding: 0.75rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
 }
 
 .text-2xl{
@@ -739,9 +723,19 @@ video {
   line-height: 2rem;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold{
@@ -760,7 +754,7 @@ video {
   --header-height: 3.5rem;
   /* ---- colors ---- */
   --first-color: #242424;
-  --first-border: rgba(207, 207, 207, 0.789);
+  --first-border: rgba(207, 207, 207, 0.712);
   --black-color: hsl(0, 0%, 0%);
   --black-color-light: hsl(0, 0%, 40%);
   --white-color: hsl(0, 0%, 95%);
@@ -945,10 +939,6 @@ button{
   transform: translateX(-50%);
 }
 
-.nav .nav__action__links a{
-  border-color:var(--first-border);
-}
-
 .nav .nav__action__links .email{
   background-color: var(--first-color);
   color: var(--white-color);
@@ -957,6 +947,7 @@ button{
 .nav .nav__action__links .cv{
   background-color: var(--white-color);
   color: var(--first-color);
+  border-color:var(--first-border);
 }
 
 .nav .nav__social__links .mobile a{
@@ -1029,6 +1020,18 @@ button{
 
   .nav .nav__social__links .desktop{
     display: none;
+  }
+
+  .home .profile .image{
+    width: 7rem;
+    height: 7rem;
+  }
+
+  .home .profile .name{
+    background-color: var(--white-color);
+    top: 1rem;
+    left: 5rem;
+    width: 9rem;
   }
 }
 
