--- a/public/output.css
+++ b/public/output.css
@@ -624,6 +624,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mr-3{
+  margin-right: 0.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -632,20 +636,20 @@ video {
   display: none;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
 .h-40{
   height: 10rem;
 }
 
-.h-9{
-  height: 2.25rem;
+.w-10{
+  width: 2.5rem;
 }
 
 .w-40{
   width: 10rem;
-}
-
-.w-9{
-  width: 2.25rem;
 }
 
 .w-96{
@@ -676,16 +680,12 @@ video {
   border-radius: 9999px;
 }
 
-.border-\[0\.125rem\]{
-  border-width: 0.125rem;
-}
-
-.border-\[0\.15rem\]{
-  border-width: 0.15rem;
-}
-
 .border-\[0\.175rem\]{
   border-width: 0.175rem;
+}
+
+.border-\[0\.2rem\]{
+  border-width: 0.2rem;
 }
 
 .border-solid{
@@ -705,17 +705,21 @@ video {
   padding: 0.75rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
 
-.pb-2{
-  padding-bottom: 0.5rem;
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .text-2xl{
@@ -723,14 +727,14 @@ video {
   line-height: 2rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -975,11 +979,7 @@ button{
   background-color: var(--white-color);
   top: 2rem;
   left: 6rem;
-  transform: rotate(-15deg);
-}
-
-.home .content .text{
-  /* background-color: red; */
+  transform: rotate(-12deg);
 }
 
 /* ============== MEDIA QUERIES ============== */
@@ -1023,12 +1023,11 @@ button{
   }
 
   .home .profile .image{
-    width: 7rem;
-    height: 7rem;
+    width: 8rem;
+    height: 8rem;
   }
 
   .home .profile .name{
-    background-color: var(--white-color);
     top: 1rem;
     left: 5rem;
     width: 9rem;
