--- a/public/output.css
+++ b/public/output.css
@@ -600,6 +600,18 @@ video {
   top: 0px;
 }
 
+.z-10{
+  z-index: 10;
+}
+
+.z-20{
+  z-index: 20;
+}
+
+.z-30{
+  z-index: 30;
+}
+
 .ml-1{
   margin-left: 0.25rem;
 }
@@ -612,12 +624,12 @@ video {
   margin-right: 0.5rem;
 }
 
-.mt-24{
-  margin-top: 6rem;
+.mt-16{
+  margin-top: 4rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
+.mt-24{
+  margin-top: 6rem;
 }
 
 .flex{
@@ -632,12 +644,20 @@ video {
   height: 3rem;
 }
 
+.h-20{
+  height: 5rem;
+}
+
 .h-40{
   height: 10rem;
 }
 
 .w-12{
   width: 3rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-28{
@@ -676,12 +696,12 @@ video {
   border-radius: 9999px;
 }
 
-.border-\[0\.2rem\]{
-  border-width: 0.2rem;
-}
-
 .border-\[0\.25rem\]{
   border-width: 0.25rem;
+}
+
+.border-\[0\.2rem\]{
+  border-width: 0.2rem;
 }
 
 .border-solid{
@@ -701,8 +721,8 @@ video {
   padding: 0.75rem;
 }
 
-.p-5{
-  padding: 1.25rem;
+.p-6{
+  padding: 1.5rem;
 }
 
 .py-10{
@@ -710,20 +730,20 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pb-3{
-  padding-bottom: 0.75rem;
-}
-
 .pb-4{
   padding-bottom: 1rem;
 }
 
-.pt-3{
-  padding-top: 0.75rem;
+.pt-2{
+  padding-top: 0.5rem;
 }
 
 .pt-4{
   padding-top: 1rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .text-2xl{
@@ -926,7 +946,7 @@ button{
 
 .stroke-text-2{
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 0.02rem;
+  -webkit-text-stroke-width: 0.03rem;
 }
 
 /* ============== HEADER & NAVBAR ============== */
@@ -972,11 +992,17 @@ button{
 
 .home .profile{
   width: 10rem;
-  /* background-color: blue; */
 }
 
 .home .profile .image{
   border-color: var(--white-color);
+}
+
+.home .profile .arrow{
+  bottom: -4.5rem;
+  left: 2rem;
+  filter: invert(1);
+  transition: filter .4s;
 }
 
 .home .profile .name{
@@ -985,6 +1011,10 @@ button{
   left: 6.5rem;
   transform: rotate(-10deg);
 }
+
+/* .home .content .text{
+    
+} */
 
 /* ============== MEDIA QUERIES ============== */
 
