--- a/public/output.css
+++ b/public/output.css
@@ -730,12 +730,20 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .pb-4{
   padding-bottom: 1rem;
 }
 
 .pt-2{
   padding-top: 0.5rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .pt-4{
@@ -768,6 +776,10 @@ video {
 
 .font-bold{
   font-weight: 700;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 /* -------- Font Type------- */
@@ -1000,16 +1012,39 @@ button{
 
 .home .profile .arrow{
   bottom: -4.5rem;
-  left: 2rem;
+  left: 2.5rem;
   filter: invert(1);
   transition: filter .4s;
 }
 
 .home .profile .name{
+  animation: slowBounce 2s linear infinite;
   background-color: var(--white-color);
   top: 2rem;
   left: 6.5rem;
   transform: rotate(-10deg);
+}
+
+@keyframes slowBounce {
+  0%, 20% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(-15px, -15px) rotate(-10deg);
+  }
+
+  60% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+
+  80% {
+    transform: translate(-8px, -8px) rotate(-5deg);
+  }
+
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
 }
 
 /* .home .content .text{
