--- a/public/output.css
+++ b/public/output.css
@@ -628,16 +628,12 @@ video {
   margin-top: 4rem;
 }
 
-.mt-24{
-  margin-top: 6rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-32{
   margin-top: 8rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -658,6 +654,14 @@ video {
 
 .h-40{
   height: 10rem;
+}
+
+.h-1{
+  height: 0.25rem;
+}
+
+.h-14{
+  height: 3.5rem;
 }
 
 .w-12{
@@ -682,6 +686,14 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-1{
+  width: 0.25rem;
+}
+
+.w-14{
+  width: 3.5rem;
 }
 
 .flex-col{
@@ -725,6 +737,10 @@ video {
      object-fit: cover;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-3{
   padding: 0.75rem;
 }
@@ -744,6 +760,10 @@ video {
 
 .pb-4{
   padding-bottom: 1rem;
+}
+
+.pl-1{
+  padding-left: 0.25rem;
 }
 
 .pt-2{
@@ -788,6 +808,10 @@ video {
 
 .font-medium{
   font-weight: 500;
+}
+
+.underline{
+  text-decoration-line: underline;
 }
 
 /* -------- Font Type------- */
@@ -1026,7 +1050,7 @@ button{
 }
 
 .home .profile .name{
-  animation: slowBounce 2s linear infinite;
+  animation: slowBounce 1s linear infinite;
   background-color: var(--white-color);
   top: 2rem;
   left: 6.5rem;
@@ -1034,11 +1058,7 @@ button{
 }
 
 @keyframes slowBounce {
-  0%, 20% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-
-  40% {
+  0%, 20%, 40% {
     transform: translate(-15px, -15px) rotate(-10deg);
   }
 
@@ -1051,13 +1071,14 @@ button{
   }
 
   100% {
-    transform: translate(0, 0) rotate(0deg);
+    transform: translate(-15px, -15px) rotate(-10deg);
   }
 }
 
-/* .home .content .text{
-    
-} */
+.home .content .github__link{
+  background-color: var(--first-color);
+  color: var(--white-color);
+}
 
 /* ============== MEDIA QUERIES ============== */
 
@@ -1085,6 +1106,8 @@ button{
 }
 
 @media screen and (max-width: 550px) {
+  /* --header-- */
+
   .nav{
     width: 100%;
     left: 0;
@@ -1097,6 +1120,13 @@ button{
 
   .nav .nav__social__links .desktop{
     display: none;
+  }
+
+  /* --home-- */
+
+  .home{
+    border-bottom-left-radius: 4rem;
+    border-bottom-right-radius: 4rem;
   }
 
   .home .profile .image{
