--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,13 +42,14 @@
 /* ====----- Responsive typography -----==== */
 @media screen and (min-width: 1150px){
     :root{
---biggest-font-size: 4.5rem;
---h1-font-size: 3rem;
---h2-font-size: 1.5rem;
---h3-font-size: 1.25rem;
---normal-font-size: 1rem;
---small-font-size: .875rem;
---smaller-font-size: .813rem;}
+    --biggest-font-size: 4.5rem;
+    --h1-font-size: 3rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.25rem;
+    --normal-font-size: 1rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
+}
 }
 /* Resetting default browser styles */
 html, body, div, span, applet, object, iframe,
@@ -115,7 +116,6 @@ button{text-align: center;}
     padding: 1rem;
 }
 .grid{
-    display: grid;
     gap: 1.5rem;
 }
 .section{
@@ -124,7 +124,7 @@ button{text-align: center;}
 .main{
     overflow: hidden; /* for animation ScrollReveal*/
 }
-.stroke-text{
+.stroke-text-1{
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 0.075rem;
 }
@@ -132,7 +132,12 @@ button{text-align: center;}
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 0.03rem;
 }
-
+.gradient-text {
+    background-image: linear-gradient(90deg, var(--first-color) 46%, hsl(0, 0%, 67%));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
 
 
 
@@ -190,7 +195,7 @@ button{text-align: center;}
     left: 6.5rem;
     transform: rotate(-10deg);
 }
-@keyframes slowBounce {
+@keyframes slowBounce{
     0%, 20%, 40% {
         transform: translate(-15px, -15px) rotate(-10deg);
     }
@@ -203,16 +208,29 @@ button{text-align: center;}
     100% {
         transform: translate(-15px, -15px) rotate(-10deg);
     }
-  }
-  
+}
+
 .home .content .github__link{
     background-color: var(--first-color);
     color: var(--white-color);
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ============== MEDIA QUERIES ============== */
-@media screen and (min-width: 1750px) {
+@media screen and (min-width: 1750px) { /*--PC & Ipad Pro--*/
     .header{
         width: 100%;
         top: 0;
@@ -224,27 +242,28 @@ button{text-align: center;}
         transform: translateX(0);
     }
 }
-
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1150px) { /*--Ipad Air--*/
     .nav{
         width: 100%;
-        left: 0;
-        transform: translateX(0);
     }
 }
-@media screen and (max-width: 550px) {
-    /* --header-- */
-    .nav{
-        width: 100%;
-        left: 0;
-        transform: translateX(0);
-    }
+@media screen and (max-width: 750px) { /*--Ipad Mini--*/
     .nav .nav__social__links .mobile{
         display: flex;
     }
     .nav .nav__social__links .desktop{
         display: none;
     }
+}
+
+@media screen and (max-width: 550px) { /*--Iphone--*/
+    /* --header-- */
+    .nav{
+        width: 100%;
+        left: 0;
+        transform: translateX(0);
+    }
+
     /* --home-- */
     .home{
         border-bottom-left-radius: 4rem;
