--- a/public/output.css
+++ b/public/output.css
@@ -580,10 +580,6 @@ video {
   }
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
@@ -612,6 +608,10 @@ video {
   z-index: 30;
 }
 
+.mb-11{
+  margin-bottom: 2.75rem;
+}
+
 .ml-1{
   margin-left: 0.25rem;
 }
@@ -628,16 +628,16 @@ video {
   margin-right: 0.5rem;
 }
 
+.mt-12{
+  margin-top: 3rem;
+}
+
 .mt-16{
   margin-top: 4rem;
 }
 
-.mt-32{
-  margin-top: 8rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -668,8 +668,8 @@ video {
   height: 10rem;
 }
 
-.w-11{
-  width: 2.75rem;
+.w-12{
+  width: 3rem;
 }
 
 .w-20{
@@ -686,10 +686,6 @@ video {
 
 .w-44{
   width: 11rem;
-}
-
-.w-96{
-  width: 24rem;
 }
 
 .w-full{
@@ -710,6 +706,14 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.whitespace-pre-wrap{
+  white-space: pre-wrap;
+}
+
+.break-words{
+  overflow-wrap: break-word;
 }
 
 .rounded-full{
@@ -737,6 +741,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-5{
+  padding: 1.25rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -758,9 +766,9 @@ video {
   text-align: center;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-sm{
@@ -882,6 +890,7 @@ html{
 }
 
 body{
+  cursor: url("assets/images/icons/white-arrow.png"), auto;
   overflow-x: hidden;
   font-family: var(--body-font);
   -webkit-touch-callout: none;
@@ -936,6 +945,10 @@ img{
 
 button{
   text-align: center;
+}
+
+a, button{
+  cursor: url("assets/images/icons/finger.png"), auto;
 }
 
 /* ========== REUSABLE CSS CLASSES ========== */
@@ -1002,7 +1015,28 @@ button{
   color: var(--white-color);
 }
 
-.nav .nav__social__links .mobile a{
+.nav .nav__action__links .language .lang-icon{
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+.nav .nav__action__links .language .english{
+  background-image: linear-gradient(90deg, blue 20%, hsl(0, 0%, 95%) 50%, red 40%);
+}
+
+.nav .nav__action__links .language .polish{
+  background-image: linear-gradient(20deg, rgb(221, 70, 70) 40%, hsl(0, 6%, 57%) 45%);
+}
+
+.nav .nav__action__links .language .german{
+  background-image: linear-gradient(0deg, gold 30%, red 45%, black 40%);
+}
+
+.nav .nav__social__links .mobile a,
+.nav .nav__social__links .mobile button{
+  width: 2.825rem;
+  height: 2.825rem;
   background-color: var(--white-color);
   color: var(--first-color);
   border-color:var(--first-border);
@@ -1024,7 +1058,7 @@ button{
 
 .home .profile .arrow{
   bottom: -4.5rem;
-  left: 2.5rem;
+  left: 3.25rem;
   filter: invert(1);
   transition: filter .4s;
 }
@@ -1032,6 +1066,7 @@ button{
 .home .profile .name{
   animation: slowBounce 1s linear infinite;
   background-color: var(--white-color);
+  color: var(--first-color);
   top: 2rem;
   left: 6.5rem;
   transform: rotate(-10deg);
@@ -1055,15 +1090,34 @@ button{
   }
 }
 
+.home .content{
+  width: 40rem;
+}
+
+/* .home .content .info{
+    text-align: center;
+    max-width: 30rem;
+} */
+
 .home .content .github__link{
   background-color: var(--first-color);
   color: var(--white-color);
 }
 
+/* ============== CAROUSEL SECTION ============== */
+
+.carousel{
+  background-color: var(--white-color);
+}
+
+.carousel img{
+  width: 5rem;
+}
+
 /* ============== MEDIA QUERIES ============== */
 
-@media screen and (min-width: 1750px) {
-  /*--PC & Ipad Pro--*/
+@media screen and (min-width: 109.375rem) {
+  /*--PC & Ipad Pro: 1750px--*/
 
   .header{
     width: 100%;
@@ -1079,8 +1133,8 @@ button{
   }
 }
 
-@media screen and (max-width: 1150px) {
-  /*--Ipad Air--*/
+@media screen and (max-width: 71.875rem) {
+  /*--Ipad Air: 1150px--*/
 
   .nav{
     width: 100%;
@@ -1090,10 +1144,18 @@ button{
     background-color: transparent;
     border: none;
   }
+
+  .home .content .info{
+    font-size: 2.25rem;
+  }
 }
 
-@media screen and (max-width: 750px) {
-  /*--Ipad Mini--*/
+@media screen and (max-width: 46.875rem) {
+  /*--Ipad Mini: 750px--*/
+
+  .nav .nav__action__links a{
+    font-size: 0.625rem;
+  }
 
   .nav .nav__social__links .mobile{
     display: flex;
@@ -1104,8 +1166,8 @@ button{
   }
 }
 
-@media screen and (max-width: 550px) {
-  /*--Iphone--*/
+@media screen and (max-width: 34.375rem) {
+  /*--Iphone: 550px--*/
 
   /* --header-- */
 
@@ -1115,11 +1177,6 @@ button{
     transform: translateX(0);
   }
 
-  .nav .nav__action__links .cv{
-    background-color: var(--white-color);
-    border: 0.2rem solid var(--first-border);
-  }
-
   .nav .nav__social__links .mobile a{
     background-color: var(--white-color);
     border: 0.25rem solid var(--first-border);
@@ -1127,9 +1184,12 @@ button{
 
   /* --home-- */
 
-  .home{
-    border-bottom-left-radius: 4rem;
-    border-bottom-right-radius: 4rem;
+  .carousel{
+    overflow-x: hidden;
+    border-top: none!important;
+    border: 0.0625rem solid rgba(173, 173, 173, 0.427);
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
   }
 
   .home .profile .image{
@@ -1139,6 +1199,18 @@ button{
 
   .home .profile .name{
     top: 1rem;
+  }
+
+  .home .profile .arrow{
+    left: 2.5rem;
+  }
+
+  .home .content{
+    width: 100%;
+  }
+
+  .home .content .info{
+    font-size: 1.9rem;
   }
 }
 
