--- a/public/output.css
+++ b/public/output.css
@@ -632,8 +632,8 @@ video {
   margin-top: 3rem;
 }
 
-.mt-16{
-  margin-top: 4rem;
+.mt-20{
+  margin-top: 5rem;
 }
 
 .inline-block{
@@ -1026,7 +1026,8 @@ a, button{
 }
 
 .nav .nav__action__links .language .polish{
-  background-image: linear-gradient(20deg, rgb(221, 70, 70) 40%, hsl(0, 6%, 57%) 45%);
+  /* background-image: linear-gradient(20deg, rgb(221, 70, 70) 40%, hsl(0, 6%, 57%) 45%); */
+  background-image: linear-gradient(20deg, rgb(221, 70, 70) 40%, white 45%);
 }
 
 .nav .nav__action__links .language .german{
@@ -1199,6 +1200,7 @@ a, button{
 
   .home .profile .name{
     top: 1rem;
+    font-weight: 500;
   }
 
   .home .profile .arrow{
