--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -283,8 +283,8 @@ a, button{
 
 /* ============== FOOTER ============== */
 .footer .line{
-    background-color: rgba(215, 215, 215, 0.789);
-    height: 0.0125rem;
+    background-color: rgba(215, 215, 215, 0.866);
+    height: 0.0175rem;
 }
 
 
@@ -345,8 +345,7 @@ a, button{
         left: 0;
         transform: translateX(0);
     }
-    .nav .nav__social__links .mobile a,
-    .footer .content .socials a{
+    .nav .nav__social__links .mobile a{
         border: 0.25rem solid;
         border-color: rgba(191, 191, 191, 0.434);
     }
@@ -404,6 +403,10 @@ a, button{
         /* background-image: linear-gradient(180deg, hsl(50, 8%, 72%), #eae8e1 90%); */
     }
     /* --footer-- */
+    .footer .content .socials a{
+        border: 0.25rem solid;
+        border-color: rgba(191, 191, 191, 0.275);
+    }
 }
 
 
